--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -162,7 +162,6 @@ section {
     position: relative;
     background-color: white;
     width: 100%;
-    z-index: -99;
 
     .logo {
         display: inline-block;
